# Monte-Carlo-VaR

./: .gitignore  Brownian.py  Monte Carlo.py  README.md  VaR.py  pyproject.toml
data/: sample_portfolio.json  sample_prices.csv
examples/: run_demo.py
legacy/: Brownian.py  Monte Carlo.py  README.md  VaR.py
src/monte_carlo_var/: __init__.py  backtest.py  calibration.py  cli.py  config.py  engine.py  market_data.py  portfolio.py  simulation.py  stress.py
src/monte_carlo_var/models/: __init__.py  geometric_brownian.py
src/monte_carlo_var/reporting/: __init__.py  report.py
src/monte_carlo_var/risk/: __init__.py  methods.py  var.py
tests/: test_backtest.py  test_methods.py  test_risk.py  test_simulation.py
