[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-var"
version = "0.3.0"
description = "Institutional-grade Monte Carlo VaR/ES demo with reporting and backtesting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
  "matplotlib>=3.7",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]

[project.scripts]
mcvar = "monte_carlo_var.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
